--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-dataset/
 .vs/
 .vscode/
 *.pyc
 __pycache__/
-playground.*
-test.*
-playground.py
-google_api/credentials.json
-google_api/token.pickle
+
+datasets/
 train_results/
-*.ipynb
-real_data
-ScreenCamera*
-*-checkpoint.py
-*eval.npy
